--- a/FireWeb/Content/bootstrap.css
+++ b/FireWeb/Content/bootstrap.css
@@ -36,6 +36,19 @@ summary {
   display: block;
 }
 
+
+
+.listOptions{
+    position:relative;
+    display:inline-block;
+}
+
+
+
+
+
+
+
 audio,
 canvas,
 video {
