--- a/FireWeb/Views/Home/Edit.cshtml
+++ b/FireWeb/Views/Home/Edit.cshtml
@@ -7,54 +7,60 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
-{
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>LoginModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    <h4>LoginModel</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        @using (Html.BeginForm("Post", "Home/Edit", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-            <div class="form-group">
-                <h5>ユーザー名</h5><h5 style="color:#ff0000">* 必須</h5>
-                <div class="col-md-10">
-                    <input class="form-control text-box single-line" id="name" name="name" type="text" value="@Model.name">
-                </div>
+    @using (Html.BeginForm("Edit", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        <div class="form-group">
+            <h5>ユーザーID</h5><h5 style="color:#ff0000">* 必須</h5>
+            <div class="col-md-10">
+                <input class="form-control text-box single-line" id="userId" name="userId" type="text" value="@Model.userId">
             </div>
+        </div>
 
-            <div class="form-group">
-                <h5>パスワード</h5><h5 style="color:#ff0000">* 必須</h5>
-                <div class="col-md-10">
-                    <input class="form-control text-box single-line" id="password" name="password" type="text" value="@Model.password">
-                </div>
+        <div class="form-group">
+            <h5>パスワード</h5><h5 style="color:#ff0000">* 必須</h5>
+            <div class="col-md-10">
+                <input class="form-control text-box single-line" id="password" name="password" type="text" value="@Model.password">
             </div>
+        </div>
 
-            <div class="form-group">
-                <h5>メールアドレス</h5>
-                <div class="col-md-10">
-                    <input class="form-control text-box single-line" id="mail" name="mail" type="text" value="@Model.mail">
-                </div>
+        <div class="form-group">
+            <h5>名前</h5><h5 style="color:#ff0000"></h5>
+            <div class="col-md-10">
+                <input class="form-control text-box single-line" id="name" name="name" type="text" value="@Model.name">
             </div>
+        </div>
 
-            <div class="form-group">
-                <h5>備考</h5>
-                <div class="col-md-10">
-                    <input class="form-control text-box single-line" id="remark" name="remark" type="text" value="@Model.remark">
-                </div>
+        <div class="form-group">
+            <h5>メールアドレス</h5>
+            <div class="col-md-10">
+                <input class="form-control text-box single-line" id="mail" name="mail" type="text" value="@Model.mail">
             </div>
+        </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Edit" class="btn btn-default" />
-                </div>
+        <div class="form-group">
+            <h5>備考</h5>
+            <div class="col-md-10">
+                <input class="form-control text-box single-line" id="remark" name="remark" type="text" value="@Model.remark">
             </div>
-        }
-    </div>
+        </div>
 
-}
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Edit" class="btn btn-default" />
+            </div>
+        </div>
+        <input id="id" name="id" type="hidden" value="@Model.id">
+    }
+</div>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
