--- a/FireWeb/Views/Home/create.cshtml
+++ b/FireWeb/Views/Home/create.cshtml
@@ -7,58 +7,72 @@
 <h2>新規ユーザー登録</h2>
 
 
-@using (Html.BeginForm(FormMethod.Post)) 
+@using (Html.BeginForm(FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    <div class="form-horizontal">
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-    <div class="form-group">
-        ユーザー名<h5 style="color:#ff0000">* 必須</h5>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <h5>ユーザーID<span style="color:#ff0000;display:inline-block;"> * 必須   @ViewBag.userIdMsg</span></h5>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.userId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.userId, "", new { @class = "text-danger" })
+            </div>
+            
         </div>
-    </div>
 
-    <div class="form-group">
-        <h5>パスワード</h5><h5 style="color:#ff0000">* 必須</h5>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <h5>パスワード<span style="color:#ff0000;display:inline-block;"> * 必須   @ViewBag.passwordMsg</span></h5>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+            </div>
+            
         </div>
-    </div>
 
-    <div class="form-group">
-        <h5>メールアドレス</h5>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.mail, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.mail, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <h5>名前<span style="color:#ff0000;display:inline-block;"></span></h5>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        <h5>備考</h5>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.remark, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.remark, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <h5>メールアドレス   @ViewBag.mailMsg</h5>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.mail, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.mail, "", new { @class = "text-danger" })
+            </div>
+            
         </div>
-    </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+        <div class="form-group">
+            <h5>備考</h5>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.remark, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.remark, "", new { @class = "text-danger" })
+            </div>
         </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="button" value="Cansel" class="btn btn-default" onclick="location.href='Create'" />
+            </div>
+        </div>
+        <label hidden>
+            @Html.EditorFor(model => model.id, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.id, "", new { @class = "text-danger" })
+        </label>
+
     </div>
-</div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
