--- a/FireWeb/Views/Auction/ItemList.cshtml
+++ b/FireWeb/Views/Auction/ItemList.cshtml
@@ -74,7 +74,7 @@
 
         <div style="margin-top:50px;">
             <div class="row">
-                @foreach (var item in Model)
+                @*@foreach (var item in Model)
                 {
                     <div class="col-md-3" style="height:500px;margin:0">
                         <div class="AucItem">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                     </div>
-                }
+                }*@
                 <div class="col-md-3" style="height:500px;margin:0">
                     <div class="AucItem">
                         <img src="https://static-mercari-jp-imgtr2.akamaized.net/thumb/photos/m51628217916_1.jpg?1527158707" style="margin:2px;height:290px;width:290px;">
