--- a/FireWeb/Views/Auction/Preview.cshtml
+++ b/FireWeb/Views/Auction/Preview.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FireWeb.Models.ItemModel>
+﻿@model FireWeb.Models.ItemModel
 
 <div class="container body-content">
     <div class="container">
@@ -19,12 +19,18 @@
 
                         <!-- 3.表示するスライドのコンテンツ -->
                         <div class="carousel-inner" role="listbox">
-                            <div class="item active">
-                                <img src="https://pbs.twimg.com/profile_images/378800000220029324/fe66faeca20115da8566e51d83447ead_400x400.jpeg" style="margin:0;height:500px;width:550px;">
-                            </div>
-                            <div class="item">
-                                <img src="https://pbs.twimg.com/profile_images/3406268893/54b7e1f981b7df7c817af48d1b96ad5e_400x400.jpeg" style="margin:0;height:500px;width:550px;">
-                            </div>
+                            @using System.Drawing;
+                            @{
+                                foreach (byte[] i in Model.BytePicture)
+                                {
+                                    var path = "data:image/jpg;base64," + i;
+
+                                    <div class="item active">
+                                        <img src="@i"  style="margin:0;height:500px;width:550px;">
+                                    </div>
+                                }
+                            }
+
                         </div>
 
                         <!-- 4.左右の矢印ボタン -->
@@ -74,7 +80,7 @@
                         </tr>
                         <tr style="font-size:40px;font-weight:600">
                             <td style="vertical-align:middle">0</td>
-                            <td style="vertical-align:middle">@ViewBag.TimeLimit.Days days @ViewBag.TimeLimit.ToString(@"hh\:mm\:ss")</td>
+                            <td style="vertical-align:middle"><FORM name="tbox1"><INPUT name="dspday" type="text" style="border:0px;font-size:38px;width:200px;text-align:center"></FORM></td>
                         </tr>
                     </table>
                 </div>
@@ -111,3 +117,50 @@
         </div>
     </div>
 </div>
+<script>
+    function countdown(y, m, d) {
+        year = y
+        mon = m - 1
+        day = d - 1
+        xday = new Date(year, mon, day, 24, 00, 00);
+        nowday = new Date();
+        passtime = xday.getTime() - nowday.getTime();
+        passtime0 = passtime
+
+        cnt_day = Math.floor(passtime / (1000 * 60 * 60 * 24));
+        passtime = passtime - (cnt_day * (1000 * 60 * 60 * 24));
+
+        cnt_hour = Math.floor(passtime / (1000 * 60 * 60));
+        cnt0_hour = Math.floor(passtime0 / (1000 * 60 * 60));
+        passtime = passtime - (cnt_hour * (1000 * 60 * 60));
+
+        cnt_min = Math.floor(passtime / (1000 * 60));
+        passtime = passtime - (cnt_min * (1000 * 60));
+
+        cnt_sec = Math.floor(passtime / 1000);
+        passtime = passtime - (cnt_sec * (1000));
+
+        if (cnt_min < 10) { cnt_min = '0' + cnt_min; }
+        if (cnt_sec < 10) { cnt_sec = '0' + cnt_sec; }
+
+        if ((xday - nowday) >
+            0) {
+            if (cnt_day == 0) {
+                x = cnt0_hour + " : " + cnt_min + " : " + cnt_sec
+            } else {
+                x = cnt_day + " Days "
+            }
+        }
+        else {
+            x = "終了致しました。"
+        }
+        return x
+    }
+</script>
+<script type="text/javascript">
+    window.onload = showday;
+    function showday() {
+        document.tbox1.dspday.value = countdown(@ViewBag.Year , @ViewBag.Month , @ViewBag.Day );
+        timerID = setTimeout('showday()', 10);
+    }
+</script>
