--- a/FireWeb/Views/Auction/ItemList.cshtml
+++ b/FireWeb/Views/Auction/ItemList.cshtml
@@ -46,25 +46,25 @@
                     <label class="control-label col-md-10"><h4>商品ステータス</h4></label>
                     <div class="col-md-10">
                         <p style="display:inline-block; width:100px;">
-                            <input type="radio" class="SearchTeam" value="AND" name="searchStatus" checked><label for="andSearch" class="con_label">全て</label>
+                            <input type="radio" class="SearchTeam" value="All" name="searchStatus" checked><label for="andSearch" class="con_label">全て</label>
                         </p>
                         <p style="display:inline-block; width:100px;">
-                            <input type="radio" class="SearchTeam" value="OR" name="searchStatus"><label for="orSearch" class="con_label">出品中</label>
+                            <input type="radio" class="SearchTeam" value="Sell" name="searchStatus"><label for="orSearch" class="con_label">出品中</label>
                         </p>
                         <p style="display:inline-block; width:100px;">
-                            <input type="radio" class="SearchTeam" value="OR" name="searchStatus"><label for="orSearch" class="con_label">売却済み</label>
+                            <input type="radio" class="SearchTeam" value="Sold" name="searchStatus"><label for="orSearch" class="con_label">売却済み</label>
                         </p>
                     </div>
                     <label class="control-label col-md-10"><h4>ユーザー商品ステータス</h4></label>
                     <div class="col-md-10">
                         <p style="display:inline-block; width:100px;">
-                            <input type="radio" class="SearchTeam" value="AND" name="searchU" checked><label for="andSearch" class="con_label">全て</label>
+                            <input type="radio" class="SearchTeam" value="All" name="searchU" checked><label for="andSearch" class="con_label">全て</label>
                         </p>
                         <p style="display:inline-block; width:100px;">
-                            <input type="radio" class="SearchTeam" value="OR" name="searchU"><label for="orSearch" class="con_label">出品中</label>
+                            <input type="radio" class="SearchTeam" value="Sell" name="searchU"><label for="orSearch" class="con_label">出品中</label>
                         </p>
                         <p style="display:inline-block; width:100px;">
-                            <input type="radio" class="SearchTeam" value="OR" name="searchU"><label for="orSearch" class="con_label">売却済み</label>
+                            <input type="radio" class="SearchTeam" value="Sold" name="searchU"><label for="orSearch" class="con_label">売却済み</label>
                         </p>
                     </div>
                 </div>
